# shiny

./: .gitignore  README.md  pyproject.toml
shiny/: __init__.py  main.py
